--- a/envoie-message.css
+++ b/envoie-message.css
@@ -65,10 +65,17 @@ section{
    background-color: transparent;
    border: 2px solid rgba(255,255,255,0.2);
    backdrop-filter: blur(20px) ;
-   padding: 30px;
-   width: 420px;
+   padding: 3%;
+   width: 600px;
    border-radius: 20px; 
 } 
+
+section h3 {
+    font-size: 30px;
+    color: #000000;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    text-align: center;
+}
 
 
 
