--- a/contact.css
+++ b/contact.css
@@ -141,7 +141,7 @@ section h1 {
   .menu-logo img {
     height: 35px;
   }
-
+}
 
 
 
@@ -169,3 +169,4 @@ section h1 {
   .menu-logo img{
     height: 40px;
   }
+} 
