--- a/envoie-message.css
+++ b/envoie-message.css
@@ -81,4 +81,57 @@ section h3 {
 
 
 
+/* Responsive Mobile 480px au plus petit */
+
+@media (max-width: 480px){
+
+  header {
+    padding: 10px;
+  }
+
+  nav{
+    gap: 5px;
+
+  }
+
+  nav a {
+    font-size: 14px;
+    padding: 14px;
+    padding: 5px 10px;
+
+  }
+ 
+  .menu-logo img {
+    height: 35px;
+  }
+}
+
+
+
+  /* TABLETS ( 768px et moins ) */
+
+@media (max-width: 768px){
+
+  /* header */
+  header {
+    padding: 10px 15px;
+    flex-direction: column;
+    gap: 15px;
+  }
+
+  nav {
+    gap: 15px;
+    flex-wrap:wrap;
+    justify-content: center;
+  }
+
+  nav a {
+    font-size: 16px;
+  }
+
+  .menu-logo img{
+    height: 40px;
+  }
+
+} 
 
