--- a/port_web.CSS
+++ b/port_web.CSS
@@ -163,6 +163,13 @@ main {
 
 /**/
 
+.pack-part h3 {
+  font-size: 25px;
+  text-align: center;
+  padding-top: 25px;
+  font-style:italic;
+}
+
 /* Grid de destinations */
 .destinations-grid {
   display: flex;
