--- a/port_web.CSS
+++ b/port_web.CSS
@@ -369,7 +369,7 @@ main {
 }
 
 .price-info {
-  font-size: 12px;
+  font-size: 22px;
   color: #7f8c8d;
   font-weight: normal;
   margin-top: 5px;
@@ -394,6 +394,111 @@ main {
   background: linear-gradient(135deg, #c74622, #e67e22);
   transform: scale(1.02);
   box-shadow: 0 4px 15px rgba(229, 90, 43, 0.4);
+}
+
+footer {
+  background-color:linear-gradient(135deg, #2d3748 0%, #1a202c 100%);
+  color: rgb(0, 0, 0);
+  margin-top: 64px;
+  padding: 48px 32px 16px;
+}
+
+.footer-content {
+  max-width: 1200;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 32px;
+  padding-bottom: 32px;
+}
+
+.footer-section {
+  flex: 1;
+  min-width: 250px;
+}
+
+.footer-section h3 {
+  font-size: 24px;
+  margin-bottom: 16px;
+  color: #000000;
+}
+
+.footer-section h4 {
+  color: #667eea;
+  margin-bottom: 16px;
+  font-size: 19px;
+}
+
+.footer-section p {
+  color: #cbd5e0;
+  line-height: 26px;
+  margin-bottom: 16px;
+}
+
+.footer-section ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.footer-section ul il {
+  margin-bottom: 8px;
+}
+
+.footer-section a {
+  color: #cbd5e0;
+  text-decoration: none;
+  transition: color 0.3s;
+}
+
+.footer-section a:hover {
+  color: #000000;
+}
+
+.contact-info li {
+  color: black;
+  margin-bottom: 11px;
+}
+
+.socail-links {
+  display: flex;
+  gap: 16px;
+  margin-top: 16px;
+}
+
+.socail-links a {
+  font-size: 29px;
+  transition:transform 0.3s;
+}
+
+.socail-links a:hover {
+  transform: scale(1.2);
+
+}
+
+.footer-botton {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding-top: 32px;
+  border-top: 1px solid #4a5568;
+  text-align: center;
+  color: #cbd5e0;
+}
+
+.footer-botton p {
+  margin: 8px 0;
+
+}
+
+.footer-links a {
+  color: cbd5e0;
+  text-decoration: none;
+  transition: color 0.3s;
+
+}
+
+.footer-links a:hover {
+  color: 667eee;
 }
 
 
