--- a/port_web.CSS
+++ b/port_web.CSS
@@ -405,6 +405,7 @@ main {
 
 /* FOOTER STYLE */
 footer {
+  margin-bottom: 0;
     background: linear-gradient(135deg, #1a202c 0%, #2d3748 100%);
     color: white;
     margin-top: 80px;
